Final notebook updates with summary and observations for Module 7

--- a/blessing_ml.ipynb
+++ b/blessing_ml.ipynb
@@ -608,6 +608,23 @@
     "\n",
     "Both methods are valuable in different contexts, but the train/test split provides greater confidence in the model's future performance.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8adb0bcf",
+   "metadata": {},
+   "source": [
+    "## Final Observation\n",
+    "\n",
+    "This project provided valuable insight into how linear regression can be used to predict climate trends. I explored two different modeling approaches to estimate the average high temperature in New York City for January 2024.\n",
+    "\n",
+    "- **Part 2** (trained on all data) predicted a 2024 temperature of **39.18°F**.  \n",
+    "- **Part 3** (used train/test split) predicted a slightly lower value of **38.05°F**.\n",
+    "\n",
+    "The difference highlights the importance of evaluating models on separate test data, as Part 3 gives a more realistic picture of how the model performs on unseen values. Residual analysis in Part 4 confirmed that the model generally fits the data well, though some variation remains.\n",
+    "\n",
+    "Overall, I learned that simple linear models can capture broad trends, but may not account for all factors. In future projects, I would consider adding more variables or testing other types of models for greater accuracy and insight.\n"
+   ]
   }
  ],
  "metadata": {
